# cremniy

./: .gitignore  .gitmodules  CONTRIBUTING.md  CONTRIBUTING_ru.md  README.md  README_ru.md  ROADMAP.md  ROADMAP_ru.md
.github/workflows/: ci.yml  release.yml
docs/: developer_guide.md
docs/EN/: developer_guide.md
docs/RU/: file_data_buffer_guide.md  hotkey.md  modules_guide.md  tools_registry_guide.md
src/: CMakeLists.txt  main.cpp
src/ToolTabs/Binary/: binarytab.cpp
src/ToolTabs/CodeEditor/: codeeditortab.cpp
src/ToolTabs/Disassembler/: disassemblertab.cpp  disassemblertab.h  disassemblerworker.cpp  disassemblerworker.h
src/ToolTabs/HexEditor/: CMakeLists.txt  hexviewtab.cpp  hexviewtab.h
src/ToolTabs/STM32Pinout/: stm32pinout.cpp  stm32pinout.h
src/app/IDEWindow/: idewindow.cpp  idewindow.h
src/app/WelcomeWindow/: welcomeform.cpp  welcomeform.h
src/core/: FileDataBuffer.cpp  ToolTab.h  ToolsRegistry.cpp  ToolsRegistry.h
src/core/file/: filemanager.cpp
src/core/icons/: iconprovider.cpp
src/core/modules/: ReferenceBase.h
src/dialogs/: customthemeeditordialog.cpp  customthemeeditordialog.h  dataconverterdialog.cpp  reversecalculatordialog.cpp  reversecalculatordialog.h  settingsdialog.cpp  settingsdialog.h  shellcodegeneratordialog.cpp  shellcodegeneratordialog.h
src/examples/DummyPlugin/: CMakeLists.txt  dummyplugin.h
src/libs/HexEditor/: CMakeLists.txt
src/libs/PluginSystem/: CMakeLists.txt  IPlugin.h  PluginManager.cpp  PluginManager.h
src/libs/cremniy-codeeditor/: CMakeLists.txt
src/libs/cremniy-codeeditor/example/: CMakeLists.txt
src/libs/cremniy-codeeditor/example/src/: main.cpp  mainwindow.cpp
src/plugins/DummyPlugin/: CMakeLists.txt  dummyplugin.cpp  dummyplugin.h  plugin.json
src/resources/: cremniy_res.qrc
src/resources/styles/: dark.qss  light.qss  style.qss
src/ui/: filestabwidget.cpp  filestabwidget.h  toolstabwidget.cpp  toolstabwidget.h
src/utils/: appsettings.cpp  appsettings.h  iconprovider.cpp  iconprovider.h  projectshistorymanager.cpp  themecolors.cpp  themecolors.h  themegenerator.cpp  themegenerator.h  thememanager.cpp  thememanager.h
src/widgets/: filetab.cpp  filetab.h  filetreeview.cpp  filetreeview.h  tooltabwidget.cpp  tooltabwidget.h
(+45 files in other folders)
